--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+bcrypt==3.1.4
+cffi==1.11.3
 click==6.7
 coverage==4.2
 Flask==0.12.2
+Flask-Bcrypt==0.7.1
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
 gunicorn==19.7.1
@@ -8,6 +11,8 @@ itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 nose==1.3.7
+pycparser==2.18
+six==1.11.0
 SQLAlchemy==1.2.0
 Werkzeug==0.14.1
 WTForms==2.1
